add project property

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,8 @@ rootProject.name = 'GradleLearning'
 include ':example2'//指定Project名称
 project(':example2').projectDir = new File(rootDir, 'chapter03/example2')//指定对应Project的路径
 
-include ':example3'//指定Project名称
-project(':example3').projectDir = new File(rootDir, 'chapter03/example3')//指定对应Project的路径
+include ':example3'
+project(':example3').projectDir = new File(rootDir, 'chapter03/example3')
+
+include ':example4'
+project(':example4').projectDir = new File(rootDir, 'chapter03/example4')
