--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,6 @@ project(':example42').projectDir = new File(rootDir, 'chapter04/example42')
 
 include ':example43'
 project(':example43').projectDir = new File(rootDir, 'chapter04/example43')
+
+include ':example44'
+project(':example44').projectDir = new File(rootDir, 'chapter04/example44')
