--- a/settings.gradle
+++ b/settings.gradle
@@ -58,3 +58,6 @@ project(':example55').projectDir = new File(rootDir, 'chapter05/example55')
 
 include ':CustomPlugin'
 project(':CustomPlugin').projectDir = new File(rootDir, 'chapter05/CustomPlugin')
+
+include ':example61'
+project(':example61').projectDir = new File(rootDir, 'chapter06/example61')
