build a app for test

--- a/settings.gradle
+++ b/settings.gradle
@@ -73,3 +73,6 @@ project(':example64').projectDir = new File(rootDir, 'chapter06/example64')
 
 include ':example65'
 project(':example65').projectDir = new File(rootDir, 'chapter06/example65')
+
+include ':app'
+project(':app').projectDir = new File(rootDir, 'chapter09/app')
